--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,13 @@
 
 .container {
     width: 100%;
-    height: 300px;
+    height: 600px;
     border: 2px solid red;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
 }
 
 .box {
