--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,20 @@
-* {
-    box-sizing: border-box;
+.box {
+    border: 4px solid lightgray;
+    width: 100px;
+    height: 100px;
+}
+
+.box-small {
+    width: 50px;
+    height: 50px;
+}
+
+.box-wrapper {
+    display: flex;
 }
 
 .container {
-    width: 100%;
-    height: 600px;
-    border: 2px solid red;
+    border: 4px solid lightgray;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    
-}
-
-.box {
-    width: 100px;
-    height: 100px;
-    border: 2px solid black;
-
 }
