--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,45 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .container {
-    border: 4px solid lightgray;
-    padding: 24px 24px 0 24px;
+  border: 4px solid lightgray;
+  padding: 80px 24px 80px 24px;
+}
+
+.row {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto -24px auto;
     display: flex;
     justify-content: space-between;
 }
 
+
 .box {
-    border: 4px solid lightgray;
-    margin-bottom: 24px;
+  border: 4px solid lightgray;
+  margin-bottom: 24px;
 }
 
 .box-small {
-    height: 50px;
+  height: 50px;
+}
+
+.box-tiny {
+  width: 30%;
+  height: 50px;
 }
 
 .box-large {
-    width: 45%;
+  width: 45%;
 }
 
 .box-wrapper {
-    width: 45%;
+  width: 45%;
 }
+
+.tiny-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
